[package]
name = "h3i"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3"
env_logger = "0.6"
inquire = "0.6.2"
mio = { version = "0.8", features = ["net", "os-poll"] }
octets = { path = "../octets" }
qlog = { version = "0.11.0", path = "../qlog" }
quiche = { path = "../quiche", features = ["qlog", "internal"]}
rand = "0.8.5"
serde_json = "1"
serde = "1"
url = "1"
smallvec = "1.11.2"
